// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filtering URL params > should not be empty if active filters are present 1`] = `
{
  "channel": undefined,
  "status": "PUBLISHED",
}
`;

exports[`Filtering URL params > should not be empty if active filters are present 2`] = `"status=PUBLISHED"`;

exports[`Filtering URL params should not be empty if active filters are present 1`] = `
Object {
  "channel": undefined,
  "status": "PUBLISHED",
}
`;

exports[`Filtering URL params should not be empty if active filters are present 2`] = `"status=PUBLISHED"`;
